# rules_shell_extra

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel
shell/: runner.sh.tpl
shell/shfmt-rules/: BUILD.bazel  workspace.bzl
shell/shfmt-rules/default/: BUILD.bazel
shfmt/: BUILD.bazel  extensions.bzl  format.sh  repositories.bzl  rules.bzl  shfmt.BUILD.bazel  shfmt.BUILD.bazel.tpl  shfmt.MODULE.bazel
shfmt/default/: BUILD.bazel
tools/: bazel
tools/bazel/: BUILD.bazel  deleted.bazelrc  refresh.sh  run.sh
tools/bazel_/: BUILD.bazel  preset.bazelrc
tools/bazel_/preset/bazel_util+/bazelrc/: preset.bazelrc
tools/bazel_/preset/bazel_util+/file/: file.bazelrc
tools/bazel_/preset/r_tools+/bazel/bazelrc/: preset.bazelrc
tools/buildifier/: BUILD.bazel
tools/file/: BUILD.bazel  file.MODULE.bazel  files.bazel  files.bazelrc  workspace.bzl
tools/git/: BUILD.bazel  files.sh  git.MODULE.bazel  lines.sh  refs-cleanup.sh  refs-local-cleanup.sh
tools/lint/: BUILD.bazel
tools/shfmt/: BUILD.bazel
