module(name = "rules_shell_extra")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "7691525d0f7da7ae27ceb47ab7bf061251363fe4"

archive_override(
    module_name = "bazel_util",
    sha256 = "d28ec8c5dfd84e55f58f6309f8ac5583ff8a5976bdd1fc6b20d88878e344e57f",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Shell

bazel_dep(name = "rules_shell", version = "0.6.1")

# Shfmt

include("//shfmt:shfmt.MODULE.bazel")
