module(name = "rules_shell_extra")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "6b04cafa73358bbd8169f47483ff318f2bd92a8e"

archive_override(
    module_name = "bazel_util",
    sha256 = "35221e3060045b73857c06b9698a878ee79b406d294b1e7bfa51aa88727cf313",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Shell

bazel_dep(name = "rules_shell", version = "0.6.1")

# Shfmt

include("//shfmt:shfmt.MODULE.bazel")
