module(name = "rules_shell_extra")

# Bazel

bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "c0dcf8fac981f06ca86d2840761b3703da3a525a"

archive_override(
    module_name = "bazel_util",
    integrity = "sha256-PoekS5Uks+78YYQpIREdHJGicuSB8umpaB25umDdVLk=",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# Git

include("//tools/git:git.MODULE.bazel")

# Javascript

bazel_dep(name = "rules_javascript")

RULES_JAVASCRIPT_VERSION = "f8a4f120bef0249f4d01edf81d1d45fdc8b77e75"

archive_override(
    module_name = "rules_javascript",
    integrity = "sha256-BQg3+TwZ6WMkFeGwOEtktsXo6rXBcUj7HBuFkfnHTJ0=",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Redo Tech

bazel_dep(name = "r_tools")

R_TOOLS_VERSION = "9151d0687cdff6827087a8f8a90eb3b91dc59e9f"

archive_override(
    module_name = "r_tools",
    integrity = "sha256-Tds/zp8wCibSHjMwxD6wO1fKh0cpNRCHPK+TWLkyQg8=",
    strip_prefix = "r-tools-%s" % R_TOOLS_VERSION,
    url = "https://github.com/redoapp/r-tools/archive/%s.tar.gz" % R_TOOLS_VERSION,
)

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Shell

bazel_dep(name = "rules_shell", version = "0.6.1")

# Shfmt

include("//shfmt:shfmt.MODULE.bazel")
