workspace(name = "rules_shell_extra")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# Skylib

SKYLIB_VERSION = "1.5.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION),
)

# Aspect Bazel Lib

ASPECT_BAZEL_LIB_VERSION = "2.8.1"

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "688354ee6beeba7194243d73eb0992b9a12e8edeeeec5b6544f4b531a3112237",
    strip_prefix = "bazel-lib-%s" % ASPECT_BAZEL_LIB_VERSION,
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v%s/bazel-lib-v%s.tar.gz" % (ASPECT_BAZEL_LIB_VERSION, ASPECT_BAZEL_LIB_VERSION),
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

aspect_bazel_lib_dependencies()

aspect_bazel_lib_register_toolchains()

# Rules Python

RULES_PYTHON_VERSION = "0.31.0"

http_archive(
    name = "rules_python",
    sha256 = "c68bdc4fbec25de5b5493b8819cfc877c4ea299c0dcb15c244c5a00208cde311",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Rules File

RULES_FILE_VERSION = "1531a8176d79ad34112c66d8f1495391bdfe032c"

http_archive(
    name = "rules_file",
    sha256 = "8336f98d2086a9d2ab09969ff3d77c65e4f1b1e274d832f96da3725d29d4ced5",
    strip_prefix = "rules_file-%s" % RULES_FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % RULES_FILE_VERSION,
)

load("@rules_file//rules:init.bzl", "file_init")

file_init()

load("@rules_file//rules:workspace.bzl", "file_repositories")

file_repositories()

load("@rules_file//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

# Redo

load("//shell/shfmt-rules:workspace.bzl", "shfmt_repositories", "shfmt_toolchains")

shfmt_repositories()

shfmt_toolchains()

load("//tools/file:workspace.bzl", "file_repositories")

file_repositories()
