workspace(name = "rules_shell_extra")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# Skylib

SKYLIB_VERSION = "1.5.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION),
)

# Rules Python

RULES_PYTHON_VERSION = "1.3.0"

http_archive(
    name = "rules_python",
    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Bazel Util

BAZEL_UTIL_VERSION = "6176db569992c21938caf01eb96343ce9fbd5e28"

http_archive(
    name = "bazel_util",
    sha256 = "c02c6017d16f7fd244a18cda307c882e2282efa7eb75a64d1ecb48bb80903a1d",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

load("@bazel_util//rules:init.bzl", "file_init")

file_init()

load("@bazel_util//rules:workspace.bzl", "file_repositories")

file_repositories()

load("@bazel_util//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

# Redo

load("//shfmt:workspace.bzl", "shfmt_repositories", "shfmt_toolchains")

shfmt_repositories()

shfmt_toolchains()

load("//tools/file:workspace.bzl", "file_repositories")

file_repositories()
