package(default_visibility = ["//visibility:public"])

toolchain(
    name = "linux_arm64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    toolchain = "//shfmt/default:linux_arm64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_x86_64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "//shfmt/default:linux_amd64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_arm64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    toolchain = "//shfmt/default:darwin_arm64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_x86_64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = "//shfmt/default:darwin_amd64",
    toolchain_type = ":toolchain_type",
)

toolchain_type(name = "toolchain_type")
