package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

toolchain(
    name = "linux_aarch32_toolchain",
    target_compatible_with = [
        "@platforms//cpu:aarch32",
        "@platforms//os:linux",
    ],
    toolchain = "@shfmt_linux_arm//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_aarch64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    toolchain = "@shfmt_linux_arm64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_x86_32_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:linux",
    ],
    toolchain = "@shfmt_linux_386//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_x86_64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "@shfmt_linux_amd64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_aarch64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    toolchain = "@shfmt_darwin_arm64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_x86_64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = "@shfmt_darwin_amd64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "windows_x86_32_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
    toolchain = "@shfmt_windows_386//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "windows_x86_64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = "@shfmt_windows_amd64//:toolchain",
    toolchain_type = ":toolchain_type",
)
