load("@rules_file//file:rules.bzl", "bazelrc_deleted_packages")
load("@rules_file//generate:rules.bzl", "generate")
load("//shell:rules.bzl", sh_binary_ = "sh_binary")

package(default_visibility = ["//visibility:public"])

bazelrc_deleted_packages(
    name = "bazelrc",
    output = "deleted.bazelrc",
    packages = ["@files//:packages"],
)

sh_binary(
    name = "run",
    srcs = ["run.sh"],
)

sh_binary_(
    name = "refresh",
    data = [
        ":bazelrc",
    ],
    main = "refresh.sh",
)
