load("@bazel_util//bazelrc:rules.bzl", "bazelrc_gen")
load("//shell:rules.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

bazelrc_gen(
    name = "bazelrc",
    path = "preset",
    deps = [
        "@r_tools//bazel/bazelrc:preset",
    ],
)

sh_binary(
    name = "refresh",
    data = [
        "@files//packages:bazelrc",
    ],
    main = "refresh.sh",
)
