file = use_extension("@bazel_util//file:extensions.bzl", "file", dev_dependency = True)
file.files(
    name = "rules_shell_extra_files",
    bazelrc = "tools/file/files.bazelrc",
    build = "//tools/file:files.bazel",
    ignore_directories = [
        "**/.git",
    ],
)
use_repo(file, files = "rules_shell_extra_files")
