package(default_visibility = ["//visibility:public"])

filegroup(
    name = "bazel_files",
    srcs = glob(["files/**/*.bazel", "files/**/*.bzl"]),
)

# executable shell files without extension
filegroup(
    name = "shfmt_exec_files",
    srcs = [],
)

filegroup(
    name = "shfmt_files",
    srcs = glob(["files/**/*.sh"]),
)
