load("//shell:rules.bzl", "sh_binary")

sh_binary(
    name = "files",
    main = "files.sh",
)

sh_binary(
    name = "lines",
    data = [":files"],
    main = "lines.sh",
)

sh_binary(
    name = "refs_cleanup",
    data = [":files"],
    main = "refs-cleanup.sh",
)

sh_binary(
    name = "refs_local_cleanup",
    data = [":files"],
    main = "refs-local-cleanup.sh",
)
