load("@bazel_util//generate:rules.bzl", "format", "generate_test", "multi_generate")

package(default_visibility = ["//visibility:public"])

format(
    name = "bazel_lint",
    srcs = ["@files//:bazel_files"],
    formatter = "//tools/buildifier",
    strip_prefix = "/files",
)

multi_generate(
    name = "lint",
    deps = [
        ":bazel_lint",
        ":shfmt_exec_lint",
        ":shfmt_lint",
    ],
)

generate_test(
    name = "lint_test",
    generate = ":lint",
    tags = ["lint"],
)

format(
    name = "shfmt_exec_lint",
    srcs = ["@files//:shfmt_exec_files"],
    file_mode = "0755",
    formatter = "//tools/shfmt",
    strip_prefix = "/files",
)

format(
    name = "shfmt_lint",
    srcs = ["@files//:shfmt_files"],
    formatter = "//tools/shfmt",
    strip_prefix = "/files",
)
